Pin fishsim and tank-shape-gen to --release 17 (backport seam S3)
Both modules ship to every MC version the mod targets (fishsim in the mod
jar, tank-shape-gen through fabric datagen), down to 1.20.1 on Java 17.
Compiling them with --release 17 keeps them one shared source across
26.1.2, 1.21.1 and 1.20.1, so fishsim fixes merge cleanly everywhere.
Toolchains are unchanged (25 and 21); only the language level/API is pinned.

The compiler reported eight Java 21 SequencedCollection calls, all
List.getFirst()/getLast(): replaced with get(0) / get(size() - 1).

Behaviour is byte-identical: fishsim 163 tests (+1 skipped) and tank-shape-gen 21955
pass with the same counts as before, and a headless export
(domain L, 12 fish, seed 42, 3000 ticks) produces identical metrics CSV,
PNGs and GIF before and after.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>